fix top bar icon design visibility

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -88,7 +88,7 @@ body {
         left: 14vh;
         top: -7vh;
 
-        :before {
+        &:before {
             content: "";
             height: 5vh;
             width: 5vh;
@@ -99,7 +99,7 @@ body {
             border-color: var(--ui-border-color-icon);
         }
 
-       :after {
+       &:after {
             content: "";
             height: 6vh;
             width: 5vh;
